--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Chat app</string>
     <string name="button_login">Login</string>
     <string name="button_signUp">Sign up</string>
+    <string name="button_dismiss">DISMISS</string>
 </resources>
