--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,18 @@
     <string name="app_name">Chat app</string>
     <string name="button_login">Login</string>
     <string name="button_signUp">Sign up</string>
+    <string name="button_logout">Log out</string>
+    <string name="button_send">send</string>
     <string name="button_dismiss">DISMISS</string>
+
+    <string name="hint_username">User name</string>
+    <string name="hint_password">password</string>
+    <string name="hint_new_message">Start a new message</string>
+    <string name="terms">By signing up, you agree to the Terms of
+        Service and Privacy Policy, including Cookie
+        Use. Others will be able to find you by
+        searching for your email address or phone
+        number when provided.</string>
+    <string name="chat_you">You</string>
+    <string name="loading">Loading…</string>
 </resources>
